makelog/10.log
In file included from drivers/net/wireless/ath/ath9k/debug.h:23:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:29,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: error: redefinition of ‘struct ath_rx_stats’
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:43:8: note: originally defined here
 struct ath_rx_stats {
        ^
In file included from drivers/net/wireless/ath/ath9k/debug.h:23:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:29,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:67:6: error: conflicting types for ‘ath9k_cmn_debug_stat_rx’
 void ath9k_cmn_debug_stat_rx(struct ath_rx_stats *rxstats,
      ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:67:6: note: previous declaration of ‘ath9k_cmn_debug_stat_rx’ was here
 void ath9k_cmn_debug_stat_rx(struct ath_rx_stats *rxstats,
      ^
In file included from drivers/net/wireless/ath/ath9k/debug.h:23:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:29,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:69:6: error: conflicting types for ‘ath9k_cmn_debug_recv’
 void ath9k_cmn_debug_recv(struct dentry *debugfs_phy,
      ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:69:6: note: previous declaration of ‘ath9k_cmn_debug_recv’ was here
 void ath9k_cmn_debug_recv(struct dentry *debugfs_phy,
      ^
In file included from drivers/net/wireless/ath/ath9k/debug.h:23:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:29,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:71:6: error: conflicting types for ‘ath9k_cmn_debug_phy_err’
 void ath9k_cmn_debug_phy_err(struct dentry *debugfs_phy,
      ^
In file included from drivers/net/wireless/ath/ath9k/common.h:26:0,
                 from drivers/net/wireless/ath/ath9k/ath9k.h:28,
                 from drivers/net/wireless/ath/ath9k/beacon.c:18:
drivers/net/wireless/ath/ath9k/common-debug.h:71:6: note: previous declaration of ‘ath9k_cmn_debug_phy_err’ was here
 void ath9k_cmn_debug_phy_err(struct dentry *debugfs_phy,
      ^
make[5]: *** [drivers/net/wireless/ath/ath9k/beacon.o] Error 1
make[4]: *** [drivers/net/wireless/ath/ath9k] Error 2
make[3]: *** [drivers/net/wireless/ath] Error 2
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [drivers/net/wireless] Error 2
make[1]: *** [drivers/net] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [drivers] Error 2
